# jermocik-chatbot-be

./: .dockerignore  Dockerfile  Dockerfile.dev  Makefile  README.md  csv_file_filter_agent.py  docker-compose.dev.yml  docker-compose.yml  env.example  graphrag_client.py  init-db.sql  neo4j_exxample.py  neo4j_working_script.py  pyproject.toml
.cursor/rules/: django-rest-api-development-rules.mdc  python-uv-cursor-rules.mdc
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
chat/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
chat/migrations/: 0001_initial.py  0002_rename_conversations_user_created_idx_conversatio_user_id_5573d3_idx_and_more.py
core/: exceptions.py  mixins.py  responses.py  urls.py  views.py
django_api_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
etl/: csv_file_filter_agent.py  main.py
etl/extractors/: pdf_detector.py  vlm_extractor.py
etl/processors/: pipeline.py
etl/results/: manifest.json
etl/results/csv/: page_245_table_1_Q1_2024_Financial_Highlights.csv  page_246_table_1_Revenues__Traffic_Acquisition_Costs__TAC___and_Num.csv  page_246_table_2_Segment_Operating_Results.csv  page_249_table_1_Alphabet_Inc._Consolidated_Balance_Sheets.csv  page_250_table_1_Alphabet_Inc._CONSOLIDATED_STATEMENTS_OF_INCOME.csv  page_251_table_1_Alphabet_Inc._CONSOLIDATED_STATEMENTS_OF_CASH_FLOW.csv  page_252_table_1_Segment_Revenues_and_Operating_Income__Loss_.csv  page_253_table_1_Other_Income__Expense___Net.csv  page_253_table_2_Reconciliation_from_GAAP_Net_Cash_Provided_by_Oper.csv  page_254_table_1_Comparison_from_the_Quarter_Ended_March_31__2023_t.csv  page_254_table_2_Comparison_from_the_Quarter_Ended_December_31__202.csv  page_255_table_1_Quarter_Ended_March_31__2023.csv  page_256_table_1_Reconciliation_from_Certain_GAAP_Measures_to_Certa.csv  page_257_table_1_Q2_2024_Financial_Highlights__unaudited_.csv  page_258_table_1_Revenues__Traffic_Acquisition_Costs__TAC___and_Num.csv  page_258_table_2_Segment_Operating_Results.csv  page_260_table_1_Alphabet_Inc._CONSOLIDATED_BALANCE_SHEETS.csv  page_261_table_1_Alphabet_Inc._CONSOLIDATED_STATEMENTS_OF_INCOME.csv  page_262_table_1_Alphabet_Inc._CONSOLIDATED_STATEMENTS_OF_CASH_FLOW.csv  page_263_table_1_Segment_Revenues_and_Operating_Income__Loss_.csv  page_264_table_1_Other_Income__Expense___Net.csv  page_264_table_2_Reconciliation_from_GAAP_Net_Cash_Provided_by_Oper.csv  page_265_table_1_Comparison_from_the_Quarter_Ended_June_30__2023_to.csv  page_265_table_2_Comparison_from_the_Quarter_Ended_March_31__2024_t.csv  page_266_table_1_Total_Revenues___Prior_Year_Comparative_Periods.csv  page_267_table_1_Q3_2024_Financial_Highlights__unaudited_.csv  page_268_table_1_Revenues__Traffic_Acquisition_Costs__TAC___and_Num.csv  page_268_table_2_Segment_Operating_Results.csv  page_270_table_1_Alphabet_Inc._CONSOLIDATED_BALANCE_SHEETS.csv  page_271_table_1_CONSOLIDATED_STATEMENTS_OF_INCOME.csv  page_272_table_1_Alphabet_Inc._CONSOLIDATED_STATEMENTS_OF_CASH_FLOW.csv  page_273_table_1_Segment_revenues_and_operating_income__loss___in_m.csv  page_274_table_1_Other_Income__Expense___Net.csv  page_274_table_2_Reconciliation_from_GAAP_Net_Cash_Provided_by_Oper.csv  page_275_table_1_Revenues_by_Geography.csv  page_275_table_2_Comparison_from_the_Quarter_Ended_June_30__2024_to.csv  page_276_table_1_Quarter_Ended_September_30__2023.csv  page_277_table_1_Q4_2024_Financial_Highlights.csv  page_278_table_1_Revenues__Traffic_Acquisition_Costs__TAC___and_Num.csv  page_278_table_2_Segment_Operating_Results.csv  (+42 more)
etl/utils/: __init__.py  file_utils.py  pdf_utils.py
pdf_etl_pipeline/: README.md  main.py  requirements.txt
pdf_etl_pipeline/config/: settings.py
pdf_etl_pipeline/src/pdf_etl/: __init__.py
pdf_etl_pipeline/src/pdf_etl/extractors/: pdf_detector.py  vlm_extractor.py
pdf_etl_pipeline/src/pdf_etl/processors/: pipeline.py
pdf_etl_pipeline/src/pdf_etl/utils/: logging_utils.py  pdf_utils.py
rag/: admin.py  etl_pipeline.py  graphrag_client.py  models.py  rag_engine.py  serializers.py  urls.py  views.py
rag/migrations/: 0001_initial.py  0002_make_document_optional.py
responder/: agents.py
