[project]
name = "django-api-boilerplate"
version = "0.1.0"
description = "A clean Django REST API boilerplate with Docker support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django==5.1.4",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.5.1",
    "django-cors-headers==4.3.1",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "pillow==10.2.0",
    "numpy>=1.25.2",
    "openai>=1.68.0",
    "pypdf==3.17.1",
    "tiktoken>=0.9.0",
    "pymupdf>=1.26.4",
    "tenacity>=9.1.2",
    "pydantic>=2.11.8",
    "orjson>=3.11.3",
    "pandas>=2.3.2",
    "pdf2image>=1.17.0",
    "langchain-openai>=0.3.33",
    "langchain-experimental>=0.3.4",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "opencv-python>=4.11.0.86",
    "neo4j>=5.28.2",
    "neo4j-graphrag>=1.4.0",
    "pgvector>=0.3.0",
    "psycopg2-binary>=2.9.9",
    "layoutparser[layoutmodels,tesseract]>=0.3.4",
    "pybind11>=3.0.1",
    "ninja>=1.13.0",
    "fvcore>=0.1.5.post20221221",
    "iopath>=0.1.10",
    "cloudpickle>=3.1.1",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.2",
    "openai-agents>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "black==23.12.1",
    "flake8==7.0.0",
    "isort==5.13.2",
]
prod = [
    "psycopg2==2.9.9",  # Source for production
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_api_project", "core", "accounts", "chat", "rag"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = ["core", "accounts", "chat", "rag"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_api_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short"
